# depthcambot

depthcambot_ws/src/: CMakeLists.txt
depthcambot_ws/src/archerfish/: Guide
depthcambot_ws/src/archerfish/archerfish_control/: CMakeLists.txt  package.xml  setup.py
depthcambot_ws/src/archerfish/archerfish_control/launch/: archerfish_control.launch
depthcambot_ws/src/archerfish/archerfish_control/nodes/: archerfish_control.py
depthcambot_ws/src/archerfish/archerfish_map_gen/: CMakeLists.txt  package.xml  setup.py
depthcambot_ws/src/archerfish/archerfish_map_gen/launch/: archerfish_map_gen.launch
depthcambot_ws/src/archerfish/archerfish_map_gen/nodes/: archerfish_map_gen.py
depthcambot_ws/src/archerfish/archerfish_model/: CMakeLists.txt  package.xml
depthcambot_ws/src/archerfish/archerfish_model/config/: robot_control.yaml
depthcambot_ws/src/archerfish/archerfish_model/launch/: robot_description.launch  world.launch
depthcambot_ws/src/archerfish/archerfish_model/model/Building/: model.sdf
depthcambot_ws/src/archerfish/archerfish_model/rviz/: view_robot.rviz  view_robot_with_camera.rviz
depthcambot_ws/src/archerfish/archerfish_model/urdf/: archerfish.xacro  archerfish_robot.gazebo.xacro
depthcambot_ws/src/archerfish/archerfish_model/worlds/: house.world
