<?xml version="1.0"?>
<package format="2">
  <name>archerfish_model</name>
  <version>0.0.0</version>
  <description>The archerfish package</description>
  <maintainer email="javen.j.w.lin@gmail.com">Javen</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <license>TODO</license>
</package>
